[package]
name = "mori"
version = "0.1.0"
authors = ["Eric Ng <naclericny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
thiserror = "1.0.24"
unicode-segmentation = "1.7.1"
non-empty-vec = "0.1.2"
